# cpp_attention_transformer_demo

./: CMakeLists.txt  GPU_ACCELERATION_SUCCESS.md  INFERENCE_GPU_UPDATE.md  Makefile  README.md  attention.cpp  benchmark_fixed.cpp  benchmark_gpu.cpp  compare_inference_performance.sh  debug_dataloader  debug_dataloader.cpp  debug_gpu.sh  debug_test  debug_test.cpp  generate_dataset.py  inference.cpp  main.cpp  matrix_ops.cpp  matrix_ops.metal  metal_gpu.h  metal_gpu.mm  metal_gpu_simple.h  metal_gpu_simple.mm  realistic_test.txt  run_inference.sh  run_training.sh  simple_test.txt  test_inference  test_inference.cpp  test_prompts.txt  tokenizer_embedding.cpp  train.cpp  train_data.txt  train_demo.cpp  training.cpp  training.h  transformer.h  transformer_blocks.cpp  transformer_model.cpp  val_data.txt
debug_dataloader.dSYM/Contents/: Info.plist
debug_dataloader.dSYM/Contents/Resources/DWARF/: debug_dataloader
debug_dataloader.dSYM/Contents/Resources/Relocations/aarch64/: debug_dataloader.yml
debug_test.dSYM/Contents/Resources/DWARF/: debug_test
test_inference.dSYM/Contents/: Info.plist
test_inference.dSYM/Contents/Resources/DWARF/: test_inference
test_inference.dSYM/Contents/Resources/Relocations/aarch64/: test_inference.yml
